css/styles.css
html, body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}

body {
  font-family: "Assistant", Helvetica, sans-serif;
  font-size: 12pt;
  line-height: 1.45;
  color: black;
  background-color: black;
}

section {
  min-height: 100%;
  min-width: 100%;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0;
  background-color: #e6e6e6;
}

.loaded section {
  opacity: 1;
  -webkit-transition: all 1.2s;
  transition: all 1.2s;
}

a, a:visited, a:active, a:focus {
  font-weight: 700;
  text-decoration: none;
  color: #990000;
}

a:hover {
  text-decoration: underline;
  color: #990000;
}

ul {
  list-style-type: square;
  margin-top: 0;
}

.overlay1 {
  background: linear-gradient(
    rgba(0, 0, 0, 0.88), 
    rgba(0, 0, 0, 0.88)
  ), no-repeat center fixed url(../images/texture.jpg);
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.overlay2 {
  background: linear-gradient(
    rgba(120, 120, 120, 0.93), 
    rgba(120, 120, 120, 0.93)
  ), no-repeat center fixed url(../images/texture.jpg);
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

#home-container {
  color: #b3b3b3;
  display: flex;
  justify-content: center;
  align-items: center;
}

#sketch-container {
  position: relative;
}

#sketch {
  height: 340px;
  margin-right: 50px;
}

#sketch-copyright {
  position: absolute;
  bottom: -5px;
  left: 7px;
  font-size: 10pt;
}

#sketch-copyright a {
  font-weight: 400;
}

#home-text {
  flex-direction: column;
  height: 255px;
  width: 350px;
  font-size: 13pt;
  margin-top: 5px;
}

.space-between {
  position: relative;
  display: flex;
  -webkit-box-pack: justify;
  justify-content: space-between;
}

#speech-bubble {
  color: #e6e6e6;
  font-family: Helvetica, sans-serif;
  font-weight: 700;
  font-size: 22pt;
  background: #397cac;
  border-radius: 16px;
  width: 305px;
  padding: 8px;
  line-height: 1.4;
  margin-left: -55px;
  text-align: center;
  position: relative;
}

#speech-bubble:after {
  content: '';
  position: absolute;
  left: 0;
  top: 55%;
  width: 0;
  height: 0;
  border: 20px solid transparent;
  border-right-color: #397cac;
  border-left: 0;
  border-bottom: 0;
  margin: -11px 0 0 -19px;
}

.icon, .icon:visited, .icon:active, .icon:focus {
  text-decoration: none;
  color: #b3b3b3;
  margin-right: 10px;
}

.icon:hover {
  text-decoration: none;
  color: white;
}

.home-icon {
  font-size: 18pt;
  margin-right: 12px;
}

#arrow-wrapper {
  position: absolute;
  bottom: 5px;
  right: 30px;
  height: 55px;
  width: 35px;
  text-align: center;
  -webkit-animation: bounce 1s linear infinite;
  animation: bounce 1s linear infinite;
}

#arrow {
  color: #e6e6e6;
  font-size: 35px;
}

@-webkit-keyframes bounce {
  0% {
    padding-bottom: 0;
  }

  50% {
    padding-bottom: 10px;
  }

  100% {
    padding-bottom: 0;
  }
}

@keyframes bounce {
  0% {
    padding-bottom: 0;
  }

  50% {
    padding-bottom: 10px;
  }

  100% {
    padding-bottom: 0;
  }
}

.section-container {
  width: 800px;
  margin: 60px;
}

h1 {
  font-family: "Assistant", Helvetica, sans-serif;
  font-weight: 700;
  margin-bottom: 22px;
  font-size: 18pt; 
}

.header {
  overflow: hidden;
}

.header > span {
  position: relative;
  display: inline-block;
}

.header > span:after, .header > span:before {
  content: '';
  position: absolute;
  top: 49%;
  border-bottom: 1px solid black;
  width: 2000%;
  margin: 0 10px;
}

.header > span:after {
  left: 100%;
}

.header > span:before {
  right: 100%;
}

#portrait {
  float: right;
  height: 200px;
  margin: 0 10px 30px 40px;
}

#education-container {
  background-color: rgba(230, 230, 230, 0.5);
  -webkit-backdrop-filter: blur(2px);
  backdrop-filter: blur(2px);
  padding: 10px 40px 30px 40px;
  width: 700px;
}

.center-header {
  text-align: center;
}

.bold-header {
  font-size: 13pt;
  font-weight: 700;
}

.align-right {
  text-align: right;
}

.skill-row {
  display: flex;
  flex-wrap: wrap;
  margin-top: -5px;
}

a.skill-box, .skill-box:visited, .skill-box:active, .skill-box:focus {
  font-size: 11pt;
  color: white;
  background-color: #8f0000;
  padding: 1px 5px;
  margin: 5px 7px 0 0;
  font-weight: normal;
}

a.skill-box:hover {
  background-color: #660000;
  text-decoration: none;
  font-weight: normal;
}

.experience-box {
  margin-bottom: 20px;
  padding-left: 20px;
  border-left: 5pt solid;
}

.at-symbol {
  color: #808080;
}

.flex-space {
  display: flex;
  flex: 1 0 10%;
  flex-flow: row nowrap;
}

.location-marker {
  margin-bottom: 8px;
  font-style: italic;
}

.location-marker i {
  margin-right: 8px;
}

.footer {
  padding: 15px 20px 15px 20px;
  color: #cccccc;
  border-bottom: 3pt solid #3d6d8f;
  opacity: 0;
}

.loaded .footer {
    opacity: 1;
    -webkit-transition: all 1s;
    transition: all 1s;
}

/* large phone (landscape) */
@media screen and (max-width: 850px) and (orientation: landscape) {
  .overlay1, .overlay2 {
    background-attachment: scroll;
  }

  #home-text {
    height: 230px;
  }

  #sketch {
    height: 280px;
    margin-right: 40px;
  }

  #arrow-wrapper {
    display: none;
  }

  .section-container {
    margin: 40px 45px;
  }

  #education-container {
    margin: 55px 45px;
    padding: 5px 25px 25px 25px;
  }

  .bold-header {
    font-size: 12pt;
  }
}

/* small phone (landscape) */
@media screen and (max-width: 640px) and (orientation: landscape) {
  #home-text {
    width: 280px;
    font-size: 12pt;
  }

  #sketch {
    height: 260px;
  }

  #speech-bubble {
    font-size: 20pt;
  }
}

/*600PX FOR NEXUS*/
/*ADD STUFF HERE*/

@media screen and (max-width: 500px) and (orientation: portrait) {
  body {
    font-size: 11pt;
  }

  h1 {
    font-size: 16pt;
  }

  .overlay1, .overlay2 {
    background-attachment: scroll;
  }

  #home-container {
    flex-direction: column;
    width: 80%;
  }

  #sketch {
    height: 250px;
    margin: 0;
  }

  #sketch-copyright {
    display: none;
  }

  #home-text {
    width: 100%;
    height: 220px;
    margin-top: 20px;
    text-align: justify;
  }

  #speech-bubble {
    background: transparent;
    width: 100%;
    margin-left: 0;
    padding: 0;
    font-size: 20pt;
    text-align: left;
  }

  #speech-bubble:after {
    display: none;
  }

  .home-icon {
    font-size: 16pt;
  }

  #arrow-wrapper {
    display: none;
  }

  #portrait {
    height: 120px;
    margin-left: 20px;
  }

  .section-container {
    margin: 20px 25px;
  }

  #education-container {
    margin: 40px 25px;
    padding: 0 18px 20px 18px;
  }

  .experience-box {
    padding-left: 12px;
  }

  .bold-header {
    font-size: 11pt;
}

/* small phone (portrait) */
@media screen and (max-width: 350px) and (orientation: portrait) {
  #sketch {
    height: 230px;
  }

  #home-text {
    font-size: 11pt;
    height: 200px;
  }

  #speech-bubble {
    font-size: 16pt;
  }

  .section-container {
    margin: 20px;
  }

  #education-container {
    margin: 40px 20px;
    padding: 0 15px 15px 15px;
  }
}

/* use Arial for Firefox only */
@-moz-document url-prefix() { 
  #speech-bubble {
    font-family: Arial, sans-serif;
  }
}

